# actix_jwt_starter

./: .example.env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2023-11-29-071337_create_users/: down.sql  up.sql
migrations/2023-12-07-040531_create_tasks/: down.sql  up.sql
src/: main.rs  schema.rs
src/authentication/: mod.rs  model.rs  routes.rs  service.rs
src/authentication/jwt/: services.rs
src/authentication/middleware/: mod.rs
src/common/: mod.rs  model.rs  openapi.rs  time.rs
src/database/: mod.rs  routes.rs  service.rs  tools.rs
src/database/model/: db.rs  mod.rs  users.rs
src/users/: mod.rs  routes.rs  service.rs
