[package]
name = "rust_jwt_api"
version = "0.0.1"
edition = "2021"
authors = ["Gunnar Mayer <g-mayer@berkeley.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0" }
dotenvy = "0.15.7"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10.61" }
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.4"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
futures = "0.3.29"
futures-util = "0.3.29"
bcrypt = "0.15.0"
actix-cors = "0.6.5"
utoipa = { version = "4.1.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
r2d2 = "0.8"
diesel_migrations = "2.1.0"
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dependencies.diesel]
version = "2.1.0"
features = ["postgres", "r2d2", "uuid", "chrono"]
